# navigation_server

./: IPInstrument.py  PGNDefns.N2kDfn.xml  README.md  can.service  client_publisher.py  configuration.py  console.py  energy.service  gen_code  gen_code.py  gen_deployment  gen_proto  ikonvert.py  install_can  install_server  instrument.py  internal_gps.py  mod_pb2.py  modem_command.py  n2k_probe.py  n2k_probe.yml  navigation.service  navigation.tar  navigation_agent.service  navigation_server.py  navigation_settings.yml  nmea0183.py  nmea2000_decode.py  nmea2000_msg.py  nmea2k_pgndefs.py  nmea_replay.py  publisher.py  pyproject.toml  requirements.txt  run_msgserver  run_profile  run_script  run_server  run_server.py  server_common.py  (+8 more)
conf/: SolidSense-conf-custom.yml  agent-network.yml  agent-test.yml  canlog-replay.yml  data-structure.yml  data_server.yml  energy_management.yml  gnss_server.yml  grpc-log_replay.yml  ikonvert-replay.yml  log_replay_investigation.yml  log_simulator.yml  log_to_json.yml  n2k_probe-PC.yml  n2k_probe-mele.yml  n2k_probe.yml  navigation_settings.yml  serial-log_replay.yml  settings-agent.yml  settings-convert-nmea0183.yml  settings-energy.yml  settings-gps.yml  settings-grpc.yml  settings-ikonvert-w10.yml  settings-ikonvert.yml  settings-in6-tests.yml  settings-in6.yml  settings-log_replay.yml  settings-log_replay2.yml  settings-miniplex3.yml  settings-mppt.yml  settings-replay-grpc.yml  settings-serial.yml  settings-sim.yml  settings-swann.yml  settings-tcp.yml  settings-test_can.yml  settings-test_can_input.yml  settings-test_grpc_input.yml  settings-ydn2k.yml  (+5 more)
def/: Manufacturers.N2kDfn.xml  N0183Defns.N0183Dfn.xml  PGNDefns.N2kDfn.xml
develop/: gen_code  gen_deployment  gen_proto  mod_pb2.py
doc/: NMEA message_server.md  NMEA system API.md  NMEA2000.md  Navigation message server.md  Navigation system API.md  Server-Router.md  global_architecture.md  python_environment.md  stnc-gnss.md
navigation_definitions/: Manufacturers.N2kDfn.xml  N0183Defns.N0183Dfn.xml
navigation_server/: __init__.py  code_generator.py  pgn_injector.py  server_main.py  set_logging_root.py
src/: IPInstrument.py  NMEA_statistics.py  client_publisher.py  code_generator.py  command.py  configuration.py  console.py  console_client.py  console_pb2.py  console_pb2_grpc.py  data_analyser.py  data_server.py  energy_mgmt_svr.py  generic_msg.py  ikonvert.py  instrument.py  internal_gps.py  j1939.proto  j1939_pb2.py  local_agent.py  mppt_instrument.py  mppt_reader.py  navigation_message_server.py  navigation_server.py  nmea0183.py  nmea0183_pb2.py  nmea2000.proto  nmea2000_decode.py  (+17 more)
(+404 files in other folders)
