[tool.poetry]
name = "navigation-server"
version = "2.1.1"
description = "Navigation Server Full Install"
authors = ["laurent <laurent.carre@sterwen-technology.eu>"]
readme = "README.md"
packages = [
    {include = "src"},
]
include = [
    {path = "def", format = ["sdist", "wheel"] },
    {path = "conf", format = ["sdist", "wheel"] },
    {path = "system", format = ["sdist", "wheel"]}
]

[tool.poetry.dependencies]
python = "^3.12"
pyserial = "^3.5"
protobuf = "~5.27.2"
grpcio = "~1.66.1"
pyyaml = "^6.0.1"
python-can = "^4.0"

[tool.poetry.scripts]
navigation_server = "navigation-server.server_main:main"
code_generator = "navigation-server.code_generator:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

