[project]
name = "navigation-server"
package-mode = false
version = "2.2.0"
description = "Navigation Server Full Install"
authors = [{name="Laurent Carré", email="<laurent.carre@sterwen-technology.eu>"}]
readme = "README.md"
requires-python = "^3.12"
packages = [
    {include = "src"},
]
include = [
    {path = "def", format = ["sdist", "wheel"] },
    {path = "conf", format = ["sdist", "wheel"] },
    {path = "system", format = ["sdist", "wheel"]}
]

dependencies = [
    "pyserial>=3.5",
    "protobuf==5.27.2",
    "grpcio==1.66.1",
    "pyyaml>=6.0.1",
    "python-can>=4.0",
    "gpiod>=2.0"
]

[project.scripts]
navigation_server = "navigation-server.server_main:main"
code_generator = "navigation-server.code_generator:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

